--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 DotaBuffCP
 
+This is merely an updated version of the DotaBuffCP found on Onur's
+Github. The site needs a regular backend update that wasn't happening 
+so I ported it over here to continue with the updates. All credit goes
+to Onur who you can find at the link below.
+
 See https://onur.github.io/DotaBuffCP for live version and more info.
